--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-  <version>2.8.3</version>
+  <version>2.8.4-SNAPSHOT</version>
 
   <packaging>bundle</packaging>
 
@@ -74,6 +74,7 @@
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Import-Package>
+              com.atlassian.templaterenderer;version="[1.5.4,3.0.0)",
               *
             </Import-Package>
             <Export-Package>
@@ -296,6 +297,12 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
       <version>3.14</version>
+    </dependency>
+    <dependency>
+      <groupId>com.atlassian.templaterenderer</groupId>
+      <artifactId>atlassian-template-renderer-api</artifactId>
+      <version>2.0.0</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
